--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -16,19 +16,19 @@
         <div class="container hero__container">
           <header class="header">
             <div class="header__col">
-              <a href="/air-asia" class="logo header__logo">
+              <a href="index.html" class="logo header__logo">
                 <img src="img/logo.png" alt="air asia logo" class="logo__pic">
               </a>
               <nav class="menu header__menu">
                 <ul class="menu__list">
                   <li class="menu__item menu__item--active">
-                    <a href="/air-asia" class="menu__link">Главная</a>
+                    <a href="index.html" class="menu__link">Home</a>
                   </li>
                   <li class="menu__item">
-                    <a href="services.html" class="menu__link">Услуги</a>
+                    <a href="services.html" class="menu__link">Services</a>
                   </li>
                   <li class="menu__item">
-                    <a href="reviews.html" class="menu__link">Отзывы</a>
+                    <a href="reviews.html" class="menu__link">Reviews</a>
                   </li>
                 </ul>
               </nav>
@@ -37,11 +37,11 @@
               <address class="contacts">
                 <a href="tel:88007003030" class="contacts__phone">8 800 700 30 30</a>
                 <div class="contacts__dropdown">
-                  <div class="contacts__dropdown-workhours">График работы</div>
+                  <div class="contacts__dropdown-workhours">Work hours</div>
                   <div class="contacts__dropdown-menu">
                     <ul class="contacts__dropdown-list">
-                      <li class="contacts__dropdown-item contacts__dropdown-item--bold">пн-вс: 09:00 - 20:00</li>
-                      <li class="contacts__dropdown-item">Обед: 14:00-14:30 </li>
+                      <li class="contacts__dropdown-item contacts__dropdown-item--bold">mn-sn: 9am - 8pm</li>
+                      <li class="contacts__dropdown-item">Break:2pm - 2:30pm </li>
                     </ul>
                   </div>
                 </div>
@@ -50,38 +50,36 @@
           </header>
           <div class="hero-content">
             <div class="hero__text-section">
-              <h1 class="hero__title">Авторские туры по Азии</h1>
-              <h5 class="hero__motto">Открой для себя Азию</h5>
-              <a href="#" class="btn btn--color--red">Подробнее</a>
+              <h1 class="hero__title">Luxury tours vacation in Asia</h1>
+              <h5 class="hero__motto">Discover beautiful Asia</h5>
+              <a href="#" class="btn btn--color--red">More info</a>
             </div>
           </div>
         </div>
       </section>
       <section class="main-content">
         <div class="container">
-          <h3 class="section-title section-title--icon--fire">Горящие туры</h3>
+          <h3 class="section-title section-title--icon--fire">Last minute travel offer</h3>
           <div class="tours">
             <div class="tours__country">
               <div class="tours__header">
                 <img src="img/content/offers/river.jpg" class="tours__img" alt="river">
               </div>
               <div class="tours__content">
-                <h5 class="tours__name">Тайланд</h5>
+                <h5 class="tours__name">Thailand</h5>
                 <div class="tours__info">
                   <div class="tours__items">
                     <img src="img/icons/offers/calendar.png" alt="calendar" class="tours__items-pic">
-                    <span class="tours__items-text">7-12 ночей</span>
+                    <span class="tours__items-text">7-12 nights</span>
                   </div>
                   <div class="tours__items">
                     <img src="img/icons/offers/meal.png" alt="meal" class="tours__items-pic">
-                    <span class="tours__items-text">Завтраки</span>
+                    <span class="tours__items-text">Breakfast</span>
                   </div>
                 </div>
-                <div class="tours__description">Равным образом постоянное обеспечение нашей деятельности позврляет
-                  оценить
-                  значение систем массового участия.
+                <div class="tours__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae ea exercitationem voluptate amet numquam ipsam magni eum earum nesciunt, minima eius laborum laudantium officiis rerum repellendus totam deserunt impedit ipsa?
                 </div>
-                <a href="#" class="btn btn--color--white btn--size--small">Смотреть</a>
+                <a href="#" class="btn btn--color--white btn--size--small">Book</a>
               </div>
             </div>
             <div class="tours__country">
@@ -89,22 +87,20 @@
                 <img src="img/content/offers/pool.jpg" class="tours__img" alt="pool">
               </div>
               <div class="tours__content">
-                <h5 class="tours__name">Бали</h5>
+                <h5 class="tours__name">Bali</h5>
                 <div class="tours__info">
                   <div class="tours__items">
                     <img src="img/icons/offers/calendar.png" alt="calendar" class="tours__items-pic">
-                    <span class="tours__items-text">7-12 ночей</span>
+                    <span class="tours__items-text">7-12 nights</span>
                   </div>
                   <div class="tours__items">
                     <img src="img/icons/offers/meal.png" alt="meal" class="tours__items-pic">
-                    <span class="tours__items-text">Завтраки</span>
+                    <span class="tours__items-text">Breakfast</span>
                   </div>
                 </div>
-                <div class="tours__description">Равным образом постоянное обеспечение нашей деятельности позврляет
-                  оценить
-                  значение систем массового участия.
+                <div class="tours__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae ea exercitationem voluptate amet numquam ipsam magni eum earum nesciunt, minima eius laborum laudantium officiis rerum repellendus totam deserunt impedit ipsa?
                 </div>
-                <a href="#" class="btn btn--color--white btn--size--small">Смотреть</a>
+                <a href="#" class="btn btn--color--white btn--size--small">Book</a>
               </div>
             </div>
             <div class="tours__country">
@@ -112,22 +108,20 @@
                 <img src="img/content/offers/ocean.jpg" class="tours__img" alt="ocean">
               </div>
               <div class="tours__content">
-                <h5 class="tours__name">Индонезия</h5>
+                <h5 class="tours__name">Indonesia</h5>
                 <div class="tours__info">
                   <div class="tours__items">
                     <img src="img/icons/offers/calendar.png" alt="calendar" class="tours__items-pic">
-                    <span class="tours__items-text">7-12 ночей</span>
+                    <span class="tours__items-text">7-12 nights</span>
                   </div>
                   <div class="tours__items">
                     <img src="img/icons/offers/meal.png" alt="meal" class="tours__items-pic">
-                    <span class="tours__items-text">Завтраки</span>
+                    <span class="tours__items-text">Breakfast</span>
                   </div>
                 </div>
-                <div class="tours__description">Равным образом постоянное обеспечение нашей деятельности позврляет
-                  оценить
-                  значение систем массового участия.
+                <div class="tours__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea cum modi numquam aliquam ut! Totam iusto incidunt libero a. Pariatur incidunt placeat eaque magnam soluta consectetur atque. Maiores, quas reprehenderit?
                 </div>
-                <a href="#" class="btn btn--color--white btn--size--small">Смотреть</a>
+                <a href="#" class="btn btn--color--white btn--size--small">Book</a>
               </div>
             </div>
           </div>
@@ -135,29 +129,27 @@
       </section>
       <section class="news">
         <div class="container">
-          <h3 class="section-title">Новости и акции</h3>
+          <h3 class="section-title">News and offers</h3>
           <div class="promo-content">
             <article class="promo">
               <img src="img/content/news/plain.jpg" alt="plain" class="promo__img">
               <div class="promo__info">
-                <div class="promo__date">декабрь 2019</div>
-                <h5 class="promo__title">Дешевые путевки на Новый Год!</h5>
-                <div class="promo__text">Проведи новый год в Тайланде</div>
+                <div class="promo__date">december 2021</div>
+                <h5 class="promo__title">Cheap New Year tours!</h5>
+                <div class="promo__text">Celebrate New Year in Thailand</div>
               </div>
             </article>
             <article class="promo">
               <img src="img/content/news/surfer.jpg" alt="surfer" class="promo__img">
               <div class="promo__info">
-                <div class="promo__date">декабрь 2019</div>
-                <h5 class="promo__title">Акции для серфенгистов!</h5>
-                <div class="promo__text">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов.
-                  Удачного
-                  пути!</div>
+                <div class="promo__date">december 2021</div>
+                <h5 class="promo__title">Great deals for surfers!</h5>
+                <div class="promo__text">If you want to catch the biggest waves, Thailand is your best bet in December. </div>
               </div>
             </article>
           </div>
           <div class="paginator">
-            <div class="paginator__display">Страница 1 из 7</div>
+            <div class="paginator__display">Page 1 of 7</div>
             <ul class="paginator__list">
               <li class="paginator__item paginator__item--active">
                 <a href="#" class="paginator__link">1</a>
@@ -188,16 +180,12 @@
         <div class="container">
           <div class="about">
             <article class="about__content">
-              <h3 class="section-title about__title">О нас</h3>
+              <h3 class="section-title about__title">About us</h3>
               <div class="about__text">
-                <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
-                  абзацев более менее
-                  осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений
-                  в
-                  домашних
-                  условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit molestias nesciunt iste aut iusto animi, deleniti quas quam commodi sequi aliquid nihil ipsam cupiditate necessitatibus, dolores consequatur atque, eveniet ex. Repudiandae ea exercitationem voluptate amet numquam ipsam magni eum earum nesciunt, minima eius laborum laudantium officiis rerum repellendus totam deserunt impedit ipsa?
+                </p>
               </div>
-              <a href="#" class="btn btn--color--red">Подробнее</a>
+              <a href="#" class="btn btn--color--red">Read more</a>
             </article>
           </div>
         </div>
@@ -207,19 +195,19 @@
       <div class="container footer-container__content">
         <div class="footer footer-container__section">
           <div class="footer__col">
-            <a href="/air-asia" class="logo footer__logo">
+            <a href="index.html" class="logo footer__logo">
               <img src="img/logo.png" alt="air asia logo" class="logo__pic">
             </a>
             <nav class="menu footer__menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="/air-asia" class="menu__link">Главная</a>
+                  <a href="index.html" class="menu__link">Home</a>
                 </li>
                 <li class="menu__item">
-                  <a href="services.html" class="menu__link">Услуги</a>
+                  <a href="services.html" class="menu__link">Services</a>
                 </li>
                 <li class="menu__item">
-                  <a href="reviews.html" class="menu__link">Отзывы</a>
+                  <a href="reviews.html" class="menu__link">Reviews</a>
                 </li>
               </ul>
             </nav>
@@ -228,29 +216,29 @@
             <div class="social">
               <ul class="social__list">
                 <li class="social__item social__item--icon--telegram">
-                  <a href="#" class="social__link" aria-label="Ссылка на наш канал в телеграме">
+                  <a href="#" class="social__link" aria-label="Link to out telegram channel">
 
                   </a>
                 </li>
                 <li class="social__item social__item--icon--vk">
-                  <a href="#" class="social__link" aria-label="Ссылка на наш канал в вконтакте">
+                  <a href="#" class="social__link" aria-label="Link to our VK page">
 
                   </a>
                 </li>
                 <li class="social__item social__item--icon--fb">
-                  <a href="#" class="social__link" aria-label="Ссылка на наш канал в фэйсбуке">
+                  <a href="#" class="social__link" aria-label="Link to our facebook page">
 
                   </a>
                 </li>
                 <li class="social__item social__item--icon--insta">
-                  <a href="#" class="social__link" aria-label="Ссылка на наш канал в инстаграме">
+                  <a href="#" class="social__link" aria-label="Link to our instagram page">
 
                   </a>
                 </li>
               </ul>
             </div>
             <address class="contacts">
-              <div class="contacts__info">Бесплатный звонок по России</div>
+              <div class="contacts__info">Free call from anywhere</div>
               <a href="tel:88007003030" class="contacts__phone">8 800 700 30 30</a>
             </address>
           </div>
