--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -16,19 +16,19 @@
         <div class="container hero hero-container">
           <header class="header header-services">
             <div class="header__col">
-            <a href="/air-asia" class="logo header__logo">
+            <a href="index.html" class="logo header__logo">
               <img src="img/logo.png" alt="air asia logo" class="logo__pic">
             </a>
             <nav class="menu header__menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="/air-asia" class="menu__link">Главная</a>
+                  <a href="index.html" class="menu__link">Home</a>
                 </li>
                 <li class="menu__item menu__item--active">
-                  <a href="services.html" class="menu__link">Услуги</a>
+                  <a href="services.html" class="menu__link">Services</a>
                 </li>
                 <li class="menu__item">
-                  <a href="reviews.html" class="menu__link">Отзывы</a>
+                  <a href="reviews.html" class="menu__link">Reviews</a>
                 </li>
               </ul>
             </nav>
@@ -37,11 +37,11 @@
             <address class="contacts">
               <a href="tel:88007003030" class="contacts__phone">8 800 700 30 30</a>
               <div class="contacts__dropdown">
-                <div class="contacts__dropdown-workhours">График работы</div>
+                <div class="contacts__dropdown-workhours">Work hours</div>
                 <div class="contacts__dropdown-menu">
                   <ul class="contacts__dropdown-list">
-                    <li class="contacts__dropdown-item contacts__dropdown-item--bold">пн-вс: 09:00 - 20:00</li>
-                    <li class="contacts__dropdown-item">Обед: 14:00-14:30 </li>
+                    <li class="contacts__dropdown-item contacts__dropdown-item--bold">mn-sn: 9am - 8pm</li>
+                    <li class="contacts__dropdown-item">Break:2pm - 2:30pm</li>
                   </ul>
                 </div>
               </div>
@@ -49,14 +49,14 @@
           </div>
           </header>
           <div class="hero-header">
-            <h1 class="hero__title hero__title-services">Услуги</h1>
+            <h1 class="hero__title hero__title-services">Services</h1>
             <nav class="breadcrumbs">
               <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item">
-                  <a href="index.html" class="breadcrumbs__link">Главная</a>
+                  <a href="index.html" class="breadcrumbs__link">Home</a>
                 </li>
                 <li class="breadcrumbs__item breadcrumbs__item--active">
-                  <span class="breadcrumbs__link">Услуги</span>
+                  <span class="breadcrumbs__link">Services</span>
                 </li>
               </ul>
             </nav>
@@ -71,17 +71,11 @@
                 <img src="img/content/service/waterfall.jpg" alt="waterfall" class="service__img">
               </div>
               <div class="service__content">
-                <h3 class="section-title service__title">Водопад Янг-бей</h3>
+                <h3 class="section-title service__title">Yang-bei Waterfall</h3>
                 <div class="service__text">
-                  <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
-                    абзацев более менее
-                    осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
-                    выступлений
-                    в
-                    домашних
-                    условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati asperiores repudiandae aliquid voluptate cum reprehenderit, deleniti ad sapiente doloremque consequatur. Sequi, non nobis magni molestias asperiores officiis vel fuga ex.</p>
                 </div>
-                <a href="#" class="btn btn--color--white">Подробнее</a>
+                <a href="#" class="btn btn--color--white">Read more</a>
               </div>
             </div>
             <div class="service">
@@ -89,21 +83,15 @@
                 <img src="img/content/service/monkeys.jpg" alt="waterfall" class="service__img">
               </div>
               <div class="service__content">
-                <h3 class="section-title service__title">Остров обезьян</h3>
+                <h3 class="section-title service__title">Monkeys island</h3>
                 <div class="service__text">
-                  <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
-                    абзацев более менее
-                    осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
-                    выступлений
-                    в
-                    домашних
-                    условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error alias esse ducimus corrupti corporis in aspernatur. Atque ex ipsum maxime temporibus et eos, quis vitae laudantium nesciunt exercitationem iusto consequatur!</p>
                 </div>
-                <a href="#" class="btn btn--color--white">Подробнее</a>
+                <a href="#" class="btn btn--color--white">Read more</a>
               </div>
             </div>
             <div class="paginator paginator--color--black">
-              <div class="paginator__display">Страница 1 из 7</div>
+              <div class="paginator__display">Page 1 of 7</div>
               <ul class="paginator__list">
                 <li class="paginator__item paginator__item--color--black paginator__item--active--white">
                   <a href="#" class="paginator__link">1</a>
@@ -134,7 +122,7 @@
       <section class="partners-content">
         <div class="container">
           <div class="partners">
-            <h2 class="partners__header">Партнеры</h2>
+            <h2 class="partners__header">Partners</h2>
             <ul class="partners__all">
               <li class="partners__item">
                 <a href="https://www.pobeda.aero/" class="partners__link">
@@ -186,19 +174,19 @@
       <div class="container footer-narrow__container">
         <div class="footer">
           <div class="footer__col">
-          <a href="/air-asia" class="logo footer__logo">
+          <a href="index.html" class="logo footer__logo">
             <img src="img/logo.png" alt="air asia logo" class="logo__pic">
           </a>
           <nav class="menu footer__menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="/air-asia" class="menu__link">Главная</a>
+                <a href="index.html" class="menu__link">Home</a>
               </li>
               <li class="menu__item">
-                <a href="services.html" class="menu__link">Услуги</a>
+                <a href="services.html" class="menu__link">Services</a>
               </li>
               <li class="menu__item">
-                <a href="reviews.html" class="menu__link">Отзывы</a>
+                <a href="reviews.html" class="menu__link">Reviews</a>
               </li>
             </ul>
           </nav>
@@ -207,29 +195,29 @@
           <div class="social">
             <ul class="social__list">
               <li class="social__item social__item--icon--telegram">
-                <a href="#" class="social__link" aria-label="Ссылка на наш канал в телеграме">
+                <a href="#" class="social__link" aria-label="Link to out telegram channel">
 
                 </a>
               </li>
               <li class="social__item social__item--icon--vk">
-                <a href="#" class="social__link" aria-label="Ссылка на наш канал в вконтакте">
+                <a href="#" class="social__link" aria-label="Link to our VK page">
 
                 </a>
               </li>
               <li class="social__item social__item--icon--fb">
-                <a href="#" class="social__link" aria-label="Ссылка на наш канал в фэйсбуке">
+                <a href="#" class="social__link" aria-label="Link to our facebook page">
 
                 </a>
               </li>
               <li class="social__item social__item--icon--insta">
-                <a href="#" class="social__link" aria-label="Ссылка на наш канал в инстаграме">
+                <a href="#" class="social__link" aria-label="Link to our instagram page">
 
                 </a>
               </li>
             </ul>
           </div>
           <address class="contacts">
-            <div class="contacts__info">Бесплатный звонок по России</div>
+            <div class="contacts__info">Free call from anywhere</div>
             <a href="tel:88007003030" class="contacts__phone">8 800 700 30 30</a>
           </address>
         </div>
