updated welcome page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="hero-content">
             <div class="hero__text-section">
               <h1 class="hero__title">Luxury tours vacation in Asia</h1>
-              <h5 class="hero__motto">Discover beautiful Asia</h5>
+              <h5 class="hero__motto">Discover mysterious Asia</h5>
               <a href="#" class="btn btn--color--red">More info</a>
             </div>
           </div>
