--- a/welcome.html
+++ b/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -14,8 +14,8 @@
     <div class="welcome__container">
       <div class="welcome__content welcome__content--asia">
         <img src="img/logo-wide.png" alt="air asia logo" class="welcome__logo">
-        <div class="welcome__slogan">Открой для себя Азию</div>
-        <a href="/air-asia" class="btn btn--color--red btn--size--smaller">Войти</a>
+        <div class="welcome__slogan">Discover mysterious Asia</div>
+        <a href="index.html" class="btn btn--color--red btn--size--smaller">Enter</a>
       </div>
     </div>
   </div>
